Modify: SQL문, .env.sample; Add: global error handler

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,8 @@
-DB_HOST=
-DB_PORT=3306
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
-DB_TYPE=mysql
+DB_HOST=HOST
+DB_PORT=PORT
+DB_USERNAME=USERNAME
+DB_PASSWORD=PASSWORD
+DB_DATABASE=DB
+DB_TYPE=TYPE
 
+DATABASE_URL=type://username:password@host:port/db
