--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 db/schema.sql
 sample.js
 .prettierrc
-
+dbsample.js
+package-lock.json
 # Created by https://www.toptal.com/developers/gitignore/api/vim,macos,node,linux,visualstudiocode,dotenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,macos,node,linux,visualstudiocode,dotenv
 
@@ -10,7 +11,8 @@ sample.js
 .env.test
 ### Linux ###
 *~
-
+db/*
+db/migrations/*
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
 
@@ -31,8 +33,6 @@ sample.js
 
 # Icon must end with two \r
 Icon
-
-
 # Thumbnails
 ._*
 
