--- a/package.json
+++ b/package.json
@@ -24,16 +24,21 @@
   "homepage": "https://github.com/wecode-bootcamp-korea/47-2nd-IIIIEE-backend#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.6.1",
     "jsonwebtoken": "^9.0.1",
+
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.5.1",
     "supertest": "^6.3.3",
     "typeorm": "^0.3.17",
-    "morgan": "^1.10.0"
+
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "dbmate": "^2.5.0",
