Modify : kakao 토큰이 아닌 인가코드를 받아오도록 수정
Modify : 불필요한 부분 제거

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "tests"
   },
   "scripts": {
+    "test": "DOTENV_CONFIG_PATH=.env.test jest --setupFiles=dotenv/config",
     "start": "nodemon server.js"
   },
   "repository": {
