--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.370.0",
     "@tensorflow-models/toxicity": "^1.2.2",
+    "aws-sdk": "^2.1420.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
