--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 db/schema.sql
 sample.js
 .prettierrc
+dbsample.js
 
 # Created by https://www.toptal.com/developers/gitignore/api/vim,macos,node,linux,visualstudiocode,dotenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,macos,node,linux,visualstudiocode,dotenv
