--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/wecode-bootcamp-korea/47-2nd-IIIIEE-backend#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.370.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
@@ -31,9 +32,12 @@
     "jest": "^29.6.1",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
-    "mysql2": "^3.5.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "mysql2": "^3.5.2",
     "supertest": "^6.3.3",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "dbmate": "^2.5.0",
