--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/wecode-bootcamp-korea/47-2nd-IIIIEE-backend#readme",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.370.0",
+    "@tensorflow-models/toxicity": "^1.2.2",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
