--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql2": "^3.5.2",
+    "mysql2": "^3.5.1",
+    "node-schedule": "^2.1.1",
     "supertest": "^6.3.3",
     "typeorm": "^0.3.17",
     "uuidv4": "^6.2.13"
